<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/box_rounded"
    android:backgroundTint="@color/grey_trans2"
    android:padding="@dimen/sixten_dp">

    <TextView
        android:id="@+id/title_error_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight_dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/title_error_category"
        android:textSize="@dimen/sixten_dp"
        android:theme="@style/Theme.Masako.TextColor"
        app:layout_constraintBottom_toTopOf="@id/subtitle_error_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtitle_error_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sixten_dp"
        android:gravity="center"
        android:text="@string/subtitle_error_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twelve_dp"
        android:background="@drawable/box_rounded"
        android:backgroundTint="@color/orange_200"
        android:includeFontPadding="false"
        android:minHeight="0dp"
        android:text="@string/reload"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_error_category" />

</androidx.constraintlayout.widget.ConstraintLayout>