<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".presentation.home.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="@dimen/sixten_dp"
            android:backgroundTint="@color/grey_trans2"
            android:visibility="visible"
            app:cardElevation="0dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/et_search_recipes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="48dp"
                    android:autofillHints="@string/suggestion_search"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/suggestion_search"
                    android:textSize="16sp"
                    android:theme="@style/Theme.Masako.TextColor" />

                <ImageButton
                    android:id="@+id/ib_search"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/button_description"
                    android:src="@drawable/ic_akar_icons_search" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/title_category"
            android:textSize="@dimen/twenty_sp"
            android:theme="@style/Theme.Masako.TextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_category"
            app:spanCount="2"
            tools:listitem="@layout/item_category" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_category"
            app:shimmer_auto_start="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/eight_dp"
                tools:ignore="RtlSymmetry">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/placeholder_item_category" />

                    <include layout="@layout/placeholder_item_category" />

                    <include layout="@layout/placeholder_item_category" />

                    <include layout="@layout/placeholder_item_category" />

                    <include layout="@layout/placeholder_item_category" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/placeholder_item_category" />

                    <include layout="@layout/placeholder_item_category" />

                    <include layout="@layout/placeholder_item_category" />

                    <include layout="@layout/placeholder_item_category" />

                    <include layout="@layout/placeholder_item_category" />
                </LinearLayout>

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <include
            android:id="@+id/error_category"
            layout="@layout/error_category"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/sixten_dp"
            android:layout_marginTop="@dimen/twelve_dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/shimmer_category"
            app:layout_constraintEnd_toEndOf="@id/shimmer_category"
            app:layout_constraintStart_toStartOf="@id/shimmer_category"
            app:layout_constraintTop_toTopOf="@id/shimmer_category" />

        <RelativeLayout
            android:id="@+id/rl_saved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/sixten_dp"
            android:layout_marginTop="@dimen/sixten_dp"
            android:background="@drawable/box_rounded_outline"
            android:backgroundTint="#66F1BF24"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/sixten_dp"
            app:layout_constraintTop_toBottomOf="@id/shimmer_category"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/img_saved"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/circle_solid"
                android:contentDescription="@string/image_description"
                android:padding="@dimen/twelve_dp"
                android:src="@drawable/ic_bookmark_fill"
                android:theme="@style/Theme.Masako.ViewGroupColor" />

            <TextView
                android:id="@+id/title_saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/twelve_dp"
                android:layout_toEndOf="@+id/img_saved"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/title_saved_recipes"
                android:textSize="@dimen/sixten_sp"
                android:theme="@style/Theme.Masako.TextColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_saved"
                android:layout_marginStart="@dimen/twelve_dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/img_saved"
                android:text="@string/subtitle_saved_recipes" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title_new_recipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/title_recommendation"
            android:textSize="@dimen/twenty_sp"
            android:theme="@style/Theme.Masako.TextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_saved" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_new_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_new_recipes"
            app:spanCount="2"
            tools:listitem="@layout/item_recipes" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_new_recipes"
            app:shimmer_auto_start="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <include layout="@layout/placeholder_item_recipes" />

                    <include layout="@layout/placeholder_item_recipes" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <include layout="@layout/placeholder_item_recipes" />

                    <include layout="@layout/placeholder_item_recipes" />
                </LinearLayout>
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <include
            android:id="@+id/error_recipes"
            layout="@layout/error_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/sixten_dp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/twelve_dp"
            app:layout_constraintEnd_toEndOf="@id/shimmer_recipes"
            app:layout_constraintStart_toStartOf="@id/shimmer_recipes"
            app:layout_constraintTop_toBottomOf="@id/tv_title_new_recipes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>